--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,9 +1,9 @@
 /* Error: Undefined variable.
  *    ,
- * 20 |   @media (min-width: $desktop-width) {
+ * 15 |   @media (min-width: $desktop-width) {
  *    |                      ^^^^^^^^^^^^^^
  *    '
- *   sass\analysis.scss 20:22  root stylesheet */
+ *   sass\feedback.scss 15:22  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 20 \2502    @media (min-width: $desktop-width) {\d\a    \2502                       ^^^^^^^^^^^^^^\a    \2575 \a   sass\\analysis.scss 20:22  root stylesheet";
+  content: "Error: Undefined variable.\a    \2577 \a 15 \2502    @media (min-width: $desktop-width) {\d\a    \2502                       ^^^^^^^^^^^^^^\a    \2575 \a   sass\\feedback.scss 15:22  root stylesheet";
 }
