--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,7 @@
 @import "the-best.scss";
 @import "skills.scss";
 @import "statistics.scss";
+@import "feedback.scss";
 @import "reviews.scss";
 @import "analysis.scss";
 @import "advantages.scss";
