--- a/css/main-footer.css
+++ b/css/main-footer.css
@@ -1,32 +1,17 @@
-.main-footer__logo {
-  margin-bottom: 10px;
-  margin-left: 30px;
-}
+/* Error: Undefined variable.
+ *   ,
+ * 2 |   @media (min-width: $desktop-width) {
+ *   |                      ^^^^^^^^^^^^^^
+ *   '
+ *   sass\main-footer.scss 2:22  root stylesheet */
 
-.main-footer__box {
-  width: 100%;
-  height: auto;
-  background: linear-gradient(180deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
-  border-radius: 40px;
-  padding: 50px 30px;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 2 \2502    @media (min-width: $desktop-width) {\d\a   \2502                       ^^^^^^^^^^^^^^\a   \2575 \a   sass\\main-footer.scss 2:22  root stylesheet";
 }
-
-.main-footer__list {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-.main-footer__item {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 18px;
-}
-
-.main-footer__link {
-  text-decoration: none;
-  color: var(--dark-color);
-}
-
-/*# sourceMappingURL=main-footer.css.map */
