--- a/sass/analysis.scss
+++ b/sass/analysis.scss
@@ -12,6 +12,23 @@
   font-size: 20px;
   line-height: 24px;
   color: var(--darken-color);
+
+  br {
+    display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 637px;
+    margin-left: 0;
+    margin-bottom: 53px;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 39px;
+
+    br {
+      display: inline;
+    }
+  }
 }
 
 .analysis__item {
@@ -23,17 +40,27 @@
     rgba(255, 255, 255, 0) 100%
   );
   padding-bottom: 70px;
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+  }
 }
 
 .analysis__list {
   display: flex;
   flex-direction: column;
-  row-gap: 20px;
+  row-gap: 40px;
   counter-reset: list-counter;
-  width: 250px;
+  max-width: 280px;
   margin: 0 auto;
   padding: 0;
   padding-top: 30px;
+
+  @media (min-width: $desktop-width) {
+    max-width: 760px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .analysis__elem {
@@ -42,20 +69,26 @@
   justify-content: flex-start;
 
   &:last-child {
-    .analysis__text::before {
-      content: none;
+    .analysis__text {
+      &::before {
+        content: none;
+      }
     }
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: column;
   }
 }
 
-.analysis__text {
+.analysis__number {
   position: relative;
-  font-family: "Montserrat", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  color: var(--darken-color);
-  margin: 0;
-  padding: 10px 0 10px 70px;
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+  border-radius: 50%;
+  background: linear-gradient(180deg, #89c2ff 0%, #c2b4f5 100%);
+  z-index: 1;
 
   &::after {
     counter-increment: list-counter;
@@ -65,29 +98,51 @@
     font-size: 23px;
     line-height: 39px;
     color: var(--light-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    left: 0;
+    left: 50%;
     top: 50%;
-    transform: translateY(-50%);
-    border-radius: 50%;
-    background: linear-gradient(180deg, #89c2ff 0%, #c2b4f5 100%);
+    transform: translate(-50%, -50%);
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 69px;
+    height: 69px;
+    margin-bottom: 13px;
+    margin-right: 0;
+  }
+}
+
+.analysis__text {
+  position: relative;
+  font-family: "Montserrat", sans-serif;
+  max-width: 210px;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--darken-color);
+  margin: 0;
+
+  @media (min-width: $desktop-width) {
+    text-align: center;
   }
 
   &::before {
     content: "";
     position: absolute;
-    background-image: url(../img/analysis-line.png);
+    background-image: url("../img/analysis-line.png");
     background-repeat: repeat;
     width: 2px;
-    height: calc((100% - 10%) - -70%);
+    height: 80px;
     color: var(--light-color);
-    background-size: 92%;
-    left: 20px;
-    top: 15px;
+    background-size: contain;
+    left: -40px;
+    top: 14px;
+    z-index: 0;
+
+    @media (min-width: $desktop-width) {
+      height: 333px;
+      left: 245px;
+      top: -213px;
+      transform: rotate(-90deg);
+    }
   }
 }
 
