--- a/sass/main-footer.scss
+++ b/sass/main-footer.scss
@@ -1,6 +1,28 @@
+.main-footer {
+  @media (min-width: $desktop-width) {
+    padding-top: 130px;
+    margin-bottom: 150px;
+  }
+}
+
+.main-footer__inner {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
 .main-footer__logo {
   margin-bottom: 10px;
   margin-left: 30px;
+
+  .logo {
+    @media (min-width: $desktop-width) {
+      width: 344px;
+      height: auto;
+    }
+  }
 }
 
 .main-footer__box {
@@ -9,12 +31,25 @@
   background: linear-gradient(180deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
   border-radius: 40px;
   padding: 50px 30px;
+
+  @media (min-width: $desktop-width) {
+    background: none;
+    padding: 0;
+  }
 }
 
 .main-footer__list {
   display: flex;
   flex-direction: column;
   gap: 30px;
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0;
+    width: 480px;
+    margin-left: auto;
+  }
 }
 
 .main-footer__item {
@@ -22,6 +57,10 @@
   font-weight: 400;
   font-size: 15px;
   line-height: 18px;
+
+  @media (min-width: $desktop-width) {
+    width: 236px;
+  }
 }
 
 .main-footer__link {
