--- a/sass/statistics.scss
+++ b/sass/statistics.scss
@@ -1,5 +1,12 @@
 .statistics {
   margin-bottom: 50px;
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-direction: column;
+    order: 1;
+    margin-bottom: 207px;
+  }
 }
 
 .statistics__title {
@@ -11,6 +18,16 @@
   margin: 0 0 50px 30px;
   padding: 0;
   text-align: left;
+
+  @media (min-width: $desktop-width) {
+    min-width: 856px;
+    margin: 0 auto;
+    margin-bottom: 150px;
+    text-align: center;
+    font-size: 32px;
+    line-height: 39px;
+    color: var(--darken-color);
+  }
 }
 
 .statistics__container {
@@ -24,6 +41,10 @@
   background-size: 300% 98%;
   background-position: 50% 0;
 
+  @media (min-width: $desktop-width) {
+    background: none;
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -35,6 +56,10 @@
     background-position-x: 50%;
     top: 40px;
     left: -35px;
+
+    @media (min-width: $desktop-width) {
+      display: none;
+    }
   }
 }
 
@@ -44,7 +69,25 @@
   align-items: flex-end;
   justify-content: center;
   padding-top: 125px;
-  padding-bottom: 175px;
+  padding-bottom: 370px;
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 0;
+    padding-top: 0;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background-color: var(--light-color);
+      bottom: 50px;
+    }
+  }
 }
 
 .statistics__item {
@@ -60,6 +103,55 @@
   &:last-child {
     margin-bottom: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    min-width: 270px;
+    margin-bottom: 0;
+    justify-content: center;
+    padding-top: 460px;
+
+    &:first-child {
+      &::after {
+        height: 190px;
+      }
+
+      .statistics__number {
+        top: 165px;
+      }
+    }
+
+    &:nth-child(3) {
+      &::after {
+        height: 250px;
+      }
+
+      .statistics__number {
+        top: 105px;
+      }
+    }
+
+    &:last-child {
+      &::after {
+        height: 20px;
+      }
+
+      .statistics__number {
+        top: 340px;
+      }
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 270px;
+      height: 347px;
+      background-image: url("../img/statistics-graphic.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      bottom: 50px;
+    }
+  }
 }
 
 .statistics__number {
@@ -70,6 +162,14 @@
   margin: 0;
   padding: 0;
   color: var(--light-color);
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 0;
+    font-weight: 200;
+    font-size: 96px;
+    line-height: 117px;
+  }
 }
 
 .statistics__description {
@@ -81,70 +181,13 @@
   padding: 0;
   width: 125px;
   color: var(--light-color);
-}
 
-.statistics__box {
-  margin: 0 auto;
-  padding-left: 0;
-  height: auto;
-}
-
-.statistics__box-title {
-  font-weight: 500;
-  font-size: 17px;
-  line-height: 24px;
-}
-
-.statistics__box-inner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.statistics__box-btn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 130px;
-  height: 130px;
-  border-radius: 30px;
-
-  span {
-    font-size: 14px;
-    line-height: 10px;
-    margin-bottom: 6px;
-    margin-left: 60px;
-    color: var(--light-color);
-  }
-
-  picture {
-    font-family: "Montserrat", sans-serif;
+  @media (min-width: $desktop-width) {
+    min-width: 220px;
     font-weight: 500;
-    font-size: 15px;
-    line-height: 18px;
-    margin-bottom: 10px;
+    font-size: 20px;
+    line-height: 24px;
+    color: var(--darken-color);
+    text-align: center;
   }
-
-  &.color1 {
-    background-color: #3f67f4;
-  }
-
-  &.color2 {
-    background-color: #fc196b;
-  }
-}
-
-.statistics__box-dedscription {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 18px;
-  max-width: 105px;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  color: var(--light-color);
 }
