--- a/sass/team.scss
+++ b/sass/team.scss
@@ -1,3 +1,15 @@
+.team {
+  position: relative;
+  bottom: -100px;
+}
+
+.team__box {
+  @media (min-width: $desktop-width) {
+    width: 100%;
+    padding: 93px 10px 10px 10px;
+  }
+}
+
 .team__box-title {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
@@ -5,6 +17,15 @@
   line-height: 29px;
   text-align: center;
   padding-left: 0;
+
+  @media (min-width: $desktop-width) {
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 39px;
+    margin-bottom: 43px;
+    text-align: start;
+    margin-left: 180px;
+  }
 }
 
 .team-slider__wrapper {
@@ -18,6 +39,14 @@
   font-size: 17px;
   line-height: 22px;
   margin-bottom: 20px;
+
+  @media (min-width: $desktop-width) {
+    width: 755px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 85px;
+  }
 }
 
 .team__box-inner {
@@ -29,4 +58,39 @@
 
 .team__user-img {
   width: 220px;
+
+  @media (min-width: $desktop-width) {
+    width: 755px;
+  }
+}
+
+.team__arrow-inner {
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+  }
+}
+
+.team__next,
+.team__prev {
+  @media (min-width: $desktop-width) {
+    width: 77px;
+    height: 77px;
+    &::after {
+      width: 77px;
+      height: 77px;
+      background: url("../img/svg/team-arrow-desk.svg");
+    }
+  }
+}
+
+.team__prev {
+  @media (min-width: $desktop-width) {
+    &::after {
+      transform: rotate(180deg);
+    }
+  }
 }
