--- a/sass/advantages.scss
+++ b/sass/advantages.scss
@@ -16,10 +16,24 @@
 
 .advantages__box {
   @media (min-width: $desktop-width) {
+    position: relative;
     background-image: url("../img/svg/advantages-doteline.svg");
     background-repeat: no-repeat;
     background-size: 80%;
-    background-position: 40% -7%;
+    background-position: 45% 5%;
+  }
+}
+
+.advantages-desktop__item {
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    z-index: 1;
+
+    .advantages-slide__container {
+      &::after {
+        z-index: -1;
+      }
+    }
   }
 }
 
@@ -57,18 +71,41 @@
   }
 }
 
-.advantages-slider__swiper {
-  padding-bottom: 50px;
+.advantages__title-span {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    display: block;
+    top: 700px;
+    max-width: 406px;
+    height: auto;
+    font-weight: 600;
+    font-size: 65px;
+    line-height: 70px;
+    color: var(--light-color);
+  }
 }
 
-.advantages__swiper-wrapper {
-  // flex-direction: column;
-  // align-items: center;
+.advantages-swiper {
+  padding-bottom: 50px;
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
+}
+
+.advantages-desktop {
+  display: none;
+  @media (min-width: $desktop-width) {
+    display: block;
+    padding-bottom: 100%;
+  }
 }
 
 .advantages-slide__container {
   position: relative;
-  width: 205px;
+  max-width: 205px;
   min-height: 130px;
   background-color: var(--light-color);
   border-radius: 40px;
@@ -78,7 +115,7 @@
   &::after {
     content: "";
     position: absolute;
-    background-image: url(../img/advantages-composition-slide.png);
+    background-image: url("../img/advantages-composition-slide.png");
     background-repeat: no-repeat;
     background-size: 100%;
     width: 285px;
@@ -86,6 +123,19 @@
     top: 8px;
     left: 15px;
     z-index: -1;
+
+    @media (min-width: $desktop-width) {
+      background-image: url("../img/advantages-composition-slide-desk.png");
+      width: 432px;
+      height: 232px;
+      top: 35px;
+      left: 30px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 323px;
+    padding: 55px 45px;
   }
 }
 
@@ -98,6 +148,12 @@
   margin: 0;
   padding: 0;
   margin-bottom: 15px;
+
+  @media (min-width: $desktop-width) {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 700;
+  }
 }
 
 .advantages-slide__description {
@@ -108,6 +164,12 @@
   margin: 0;
   padding: 0;
   color: var(--darken-color);
+
+  @media (min-width: $desktop-width) {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+  }
 }
 
 .advantages__arrow-inner {
@@ -135,12 +197,30 @@
   margin: 0 auto;
   font-weight: 400;
   margin-bottom: 50px;
+
+  @media (min-width: $desktop-width) {
+    background-color: var(--light-color);
+    text-align: center;
+    margin-top: 37px;
+  }
 }
 
 .slide-bg2 {
   &::after {
     background-image: url("../img/advantages-slide-2.png");
     top: 25px;
+
+    @media (min-width: $desktop-width) {
+      background-image: url("../img/advantages-slide-2-desk.png");
+      background-size: 80%;
+      top: 50px;
+      left: 100px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    left: 500px;
+    top: 120px;
   }
 }
 
@@ -150,6 +230,17 @@
     top: 25px;
     background-size: 45%;
     background-position: 110% 100%;
+
+    @media (min-width: $desktop-width) {
+      background-image: url("../img/advantages-slide-3-desk.png");
+      left: 0;
+      top: 35px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    left: 800px;
+    top: 420px;
   }
 }
 
@@ -158,6 +249,16 @@
     background-image: url("../img/advantages-slide-4.png");
     background-size: 65%;
     background-position: 99% 100%;
+
+    @media (min-width: $desktop-width) {
+      background-image: url("../img/advantages-slide-4-desk.png");
+      left: 0;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    left: 561px;
+    top: 700px;
   }
 }
 
@@ -166,6 +267,17 @@
     background-image: url("../img/advantages-slide-5.png");
     background-size: 80%;
     background-position: 99% 100%;
+
+    @media (min-width: $desktop-width) {
+      background-image: url("../img/advantages-slide-5-desk.png");
+      top: 0;
+      left: 0;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    left: 80px;
+    top: 760px;
   }
 }
 
@@ -174,5 +286,15 @@
     background-image: url("../img/advantages-slide-6.png");
     background-size: 32%;
     background-position: 99% 100%;
+
+    @media (min-width: $desktop-width) {
+      top: -25px;
+      left: -9px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    left: 0px;
+    top: 1060px;
   }
 }
