--- a/sass/purposes-slider.scss
+++ b/sass/purposes-slider.scss
@@ -46,6 +46,7 @@
   width: 255px;
   height: auto;
   margin: 0 auto;
+  margin-bottom: 30px;
   background: linear-gradient(
     180deg,
     rgba(210, 201, 242, 1) 0%,
