--- a/sass/team.scss
+++ b/sass/team.scss
@@ -1,6 +1,8 @@
 .team {
   position: relative;
   bottom: -100px;
+  background-color: var(--light-color);
+  border-radius: 40px;
 }
 
 .team__box {
