--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ a {
 }
 
 .inner__body {
+  position: relative;
   padding-top: 20px;
 }
 
@@ -152,7 +153,7 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    margin-bottom: 190px;
+    margin-bottom: 250px;
     padding-top: 50px;
   }
 }
@@ -195,7 +196,7 @@ a {
   width: 100%;
   height: auto;
   background: #f1f2f4;
-  z-index: 2;
+  z-index: 15;
   border-bottom-left-radius: 40px;
   border-bottom-right-radius: 40px;
 }
@@ -214,7 +215,7 @@ a {
 }
 
 .burger__active {
-  z-index: 3;
+  z-index: 20;
 }
 .burger__active span {
   background-color: #d2c9f2;
@@ -352,7 +353,7 @@ a {
 }
 @media (min-width: 1080px) {
   .topic {
-    margin-bottom: 130px;
+    margin-bottom: 280px;
   }
 }
 
@@ -477,6 +478,11 @@ a {
   margin-bottom: 50px;
   padding-bottom: 300px;
 }
+@media (min-width: 1080px) {
+  .purposes {
+    padding-bottom: 250px;
+  }
+}
 .purposes::after {
   content: "";
   position: absolute;
@@ -489,6 +495,17 @@ a {
   z-index: 3;
   bottom: 0;
 }
+.purposes::before {
+  content: "";
+  position: absolute;
+  background-image: url("../img/bg-top.png");
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 1731px;
+  z-index: -1;
+  top: -950px;
+  left: 0;
+}
 @media (min-width: 1080px) {
   .purposes::after {
     width: 824px;
@@ -498,6 +515,12 @@ a {
     background-size: contain;
     right: 0;
     bottom: -220px;
+  }
+  .purposes::before {
+    content: "";
+    position: absolute;
+    background-image: url("../img/bg-top-desk.png");
+    height: 1316px;
   }
 }
 
@@ -660,7 +683,7 @@ a {
     width: 176px;
     align-items: flex-start;
     margin: 0;
-    top: -127px;
+    top: -120px;
   }
 }
 
@@ -787,6 +810,7 @@ a {
   width: 255px;
   height: auto;
   margin: 0 auto;
+  margin-bottom: 30px;
   background: linear-gradient(180deg, rgb(210, 201, 242) 0%, rgba(255, 255, 255, 0) 100%);
   border-radius: 40px;
 }
@@ -1002,7 +1026,7 @@ a {
   color: var(--darken-color);
   margin: 0;
   margin-bottom: 18px;
-  padding: 30px 0 0 25px;
+  padding: 30px 25px 0 25px;
   text-align: left;
 }
 @media (min-width: 1080px) {
@@ -1410,7 +1434,6 @@ a {
   font-size: 16px;
   line-height: 19px;
   color: var(--darken-color);
-  margin-bottom: 30px;
 }
 @media (min-width: 1080px) {
   .reviews__slider-description {
@@ -1554,7 +1577,7 @@ a {
   height: auto;
   margin: 0 auto;
   background: linear-gradient(180deg, rgb(210, 201, 242) 30%, rgba(255, 255, 255, 0) 100%);
-  padding-bottom: 70px;
+  padding-bottom: 90px;
 }
 @media (min-width: 1080px) {
   .analysis__item {
@@ -1671,13 +1694,13 @@ a {
   background-position: 50% 0;
   margin-top: -240px;
   padding-top: 190px;
-  margin-bottom: 50px;
+  margin-bottom: 150px;
 }
 @media (min-width: 1080px) {
   .advantages {
     background-image: url("../img/advantages-bg-desk.png");
     background-size: 200%;
-    padding-top: 390px;
+    padding-top: 350px;
   }
 }
 
@@ -1864,7 +1887,6 @@ a {
   border: 1px solid var(--light-color);
   margin: 0 auto;
   font-weight: 400;
-  margin-bottom: 50px;
 }
 @media (min-width: 1080px) {
   .advantages__btn-link {
@@ -1971,6 +1993,8 @@ a {
 .team {
   position: relative;
   bottom: -100px;
+  background-color: var(--light-color);
+  border-radius: 40px;
 }
 
 @media (min-width: 1080px) {
@@ -2117,7 +2141,7 @@ a {
   .main-footer__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 0;
+    gap: 10px;
     width: 480px;
     margin-left: auto;
   }
@@ -2138,6 +2162,12 @@ a {
 .main-footer__link {
   text-decoration: none;
   color: var(--dark-color);
+}
+@media (min-width: 1080px) {
+  .main-footer__link {
+    font-size: 13px;
+    line-height: 16px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
