--- a/sass/skills.scss
+++ b/sass/skills.scss
@@ -44,7 +44,7 @@
   color: var(--darken-color);
   margin: 0;
   margin-bottom: 18px;
-  padding: 30px 0 0 25px;
+  padding: 30px 25px 0 25px;
   text-align: left;
 
   @media (min-width: $desktop-width) {
